--- a/databases/mongodb50/Makefile
+++ b/databases/mongodb50/Makefile
@@ -1,15 +1,13 @@
 PORTNAME=	mongodb
 DISTVERSIONPREFIX=	r
-DISTVERSION=	5.0.20
+DISTVERSION=	5.0.31
+PORTREVISION=	1
 CATEGORIES=	databases net
-MASTER_SITES=	https://fastdl.mongodb.org/src/ \
-		http://fastdl.mongodb.org/src/
 PKGNAMESUFFIX=	${DISTVERSION:R:S/.//}
-DISTNAME=	mongodb-src-${DISTVERSIONPREFIX}${DISTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Distributed document-oriented "NoSQL" database (5.0.x Branch)
-WWW=		https://docs.mongodb.com/v5.0/
+COMMENT=	MongoDB Community Edition (5.0.x Branch)
+WWW=		https://www.mongodb.com/docs/v5.0/
 
 LICENSE=	Apache-2.0 SSPLv1 # mongodb is SSPLv1, C++ driver is APACHE20
 LICENSE_COMB=	multi
@@ -17,12 +15,15 @@ LICENSE_NAME_SSPLv1=	Server Side Public License Version 1
 LICENSE_FILE_SSPLv1=	${WRKSRC}/LICENSE-Community.txt
 LICENSE_PERMS_SSPLv1=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
+DEPRECATED=	EOL from October 2024, see https://www.mongodb.com/legal/support-policy/lifecycles
+EXPIRATION_DATE=	2025-10-30
 ONLY_FOR_ARCHS=	aarch64 amd64 powerpc64le
 ONLY_FOR_ARCHS_REASON=	only ported to amd64, aarch64, and powerpc64le on BSD; upstream supports arm64, ppc64le, s390x, and x86-64
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cheetah3>0:devel/py-cheetah3@${PY_FLAVOR} \
+BUILD_DEPENDS=	${PY_SETUPTOOLS} \
+		${PYTHON_PKGNAMEPREFIX}cheetah3>0:devel/py-cheetah3@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}psutil>0:sysutils/py-psutil@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}yaml>=3.11:devel/py-yaml@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}pyyaml>=3.11:devel/py-pyyaml@${PY_FLAVOR}
 LIB_DEPENDS=	libcurl.so:ftp/curl \
 		libpcre.so:devel/pcre \
 		libsnappy.so:archivers/snappy \
@@ -34,12 +35,26 @@ LIB_DEPENDS=	libcurl.so:ftp/curl \
 USES=		compiler:c++17-lang cpe python:build scons shebangfix
 USE_RC_SUBR=	mongod
 
+USE_GITHUB=	yes
+GH_ACCOUNT=	mongodb
+GH_PROJECT=	mongo
+
 SHEBANG_FILES=	buildscripts/scons.py
 python_OLD_CMD=	@python_interpreter@
 
+EXTRACT_AFTER_ARGS=	--exclude src/third_party/pcre-* \
+			--exclude src/third_party/snappy-* \
+			--exclude src/third_party/unwind \
+			--exclude src/third_party/yaml-cpp \
+			--exclude src/third_party/zlib-* \
+			--exclude src/third_party/zstandard-* \
+			--no-same-owner --no-same-permissions
+
+# --modules= disables "enterprise" module from src/mongo/db/modules/
 MAKE_ARGS=	--cxx-std=17 \
 		--disable-warnings-as-errors \
 		--libc++ \
+		--modules= \
 		--runtime-hardening=on \
 		--use-system-libunwind \
 		--use-system-pcre \
@@ -50,6 +65,7 @@ MAKE_ARGS=	--cxx-std=17 \
 		--use-system-zstd \
 		-j ${MAKE_JOBS_NUMBER} \
 		AR=llvm-ar \
+		MONGO_VERSION=${DISTVERSION} \
 		VERBOSE=on TARGET_OS=freebsd
 
 CFLAGS+=	-DBOOST_NO_CXX98_FUNCTION_BASE
@@ -60,7 +76,7 @@ USERS=		mongodb
 GROUPS=		mongodb
 
 OPTIONS_DEFINE=		LTO SASL SSL NOAVX
-OPTIONS_DEFAULT=	LTO SASL SSL
+OPTIONS_DEFAULT=	SASL SSL NOAVX
 
 NOAVX_DESC=	"Disable AVX instructions on amd64 (Sandybridge+)"
 
@@ -73,6 +89,12 @@ SASL_MAKE_ARGS=		--use-sasl-client
 
 SSL_USES=	ssl
 SSL_MAKE_ARGS=	--ssl
+
+.include <bsd.mport.options.mk>
+
+.if ${OPSYS} == FreeBSD && (${OSREL:R} >= 15 && ${OSVERSION} >= 1500026)
+USES+=		llvm:max=18,build
+.endif
 
 .include <bsd.port.pre.mk>
 
@@ -90,14 +112,6 @@ CPE_PRODUCT=	mongodb
 
 pre-patch:
 	${MV} ${WRKSRC}/src/third_party/wiredtiger/src/checksum/power8/crc32.sx ${WRKSRC}/src/third_party/wiredtiger/src/checksum/power8/crc32.S
-
-post-patch:
-	${RM} -rf ${WRKSRC}/src/third_party/pcre-*
-	${RM} -rf ${WRKSRC}/src/third_party/snappy-*
-	${RM} -rf ${WRKSRC}/src/third_party/unwind
-	${RM} -rf ${WRKSRC}/src/third_party/yaml-cpp
-	${RM} -rf ${WRKSRC}/src/third_party/zlib-*
-	${RM} -rf ${WRKSRC}/src/third_party/zstandard-*
 
 do-build:
 	${WRKSRC}/buildscripts/scons.py	-C ${WRKSRC} ${MAKE_ARGS} ${FAKE_MAKEARGS}
