start work on nvidia-drm kmod

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -226,6 +226,8 @@ SUBDIR += mypaint
 SUBDIR += mypaint-brushes
 SUBDIR += mypaint-brushes2
 SUBDIR += netpbm
+SUBDIR += nvidia-drm-kmod
+SUBDIR += nvidia-drm-510-kmod
 SUBDIR += nvidia-texture-tools
 SUBDIR += ocrad
 SUBDIR += okular
