--- a/x11/libSM/Makefile
+++ b/x11/libSM/Makefile
@@ -1,8 +1,7 @@
 PORTNAME=	libSM
-PORTVERSION=	1.2.4
+PORTVERSION=	1.2.6
 PORTEPOCH=	1
 CATEGORIES=	x11
-DISTFILES=      ${PORTNAME}-${PORTVERSION}.tar.xz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Session Management library for X11
@@ -10,7 +9,7 @@ WWW=		https://www.freedesktop.org/Software/xlibs
 
 LICENSE=	mit
 
-USES=		xorg xorg-cat:lib tar:xz
+USES=		pathfix tar:xz xorg xorg-cat:lib
 USE_XORG=	ice xorgproto xtrans
 
 CONFIGURE_ARGS+=--disable-docs --without-xmlto
