--- a/x11/libXdmcp/Makefile
+++ b/x11/libXdmcp/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libXdmcp
-PORTVERSION=	1.1.3
+PORTVERSION=	1.1.5
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,7 +8,7 @@ WWW=		https://www.freedesktop.org/Software/xlibs
 
 LICENSE=	mit
 
-USES=		cpe xorg xorg-cat:lib
+USES=		cpe tar:xz xorg xorg-cat:lib
 USE_XORG=	xorgproto:both
 
 CPE_VENDOR=	x.org
