--- a/x11/libXvMC/Makefile
+++ b/x11/libXvMC/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libXvMC
-PORTVERSION=	1.0.12
+PORTVERSION=	1.0.14
 PORTREVISION=	1
 CATEGORIES=	x11
 
@@ -9,7 +9,7 @@ COMMENT=	X Video Extension Motion Compensation library
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		cpe xorg xorg-cat:lib
+USES=		cpe tar:xz xorg xorg-cat:lib
 USE_XORG=	x11 xext xorgproto xv
 CPE_VENDOR=	x
 CPE_PRODUCT=	libxvmc
