--- a/astro/Makefile
+++ b/astro/Makefile
@@ -3,6 +3,7 @@ COMMENT = Astronomical ports
 SUBDIR += cfitsio
 SUBDIR += gpsbabel
 SUBDIR += gpsd
+SUBDIR += kosmindoormap
 SUBDIR += libnova
 SUBDIR += luna
 SUBDIR += marble
