--- a/devel/Makefile
+++ b/devel/Makefile
@@ -292,6 +292,7 @@ SUBDIR += kf6-kunitconversion
 SUBDIR += kf6-solid
 SUBDIR += kf6-threadweaver
 SUBDIR += kio-extras
+SUBDIR += kopeninghours
 SUBDIR += ktextaddons
 SUBDIR += kyua
 SUBDIR += lcov
