--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1114,6 +1114,7 @@ SUBDIR += py-buildbot-worker
 SUBDIR += py-buildbot-www
 SUBDIR += py-cachetools
 SUBDIR += py-calver
+SUBDIR += py-capstone
 SUBDIR += py-cattrs
 SUBDIR += py-cbor
 SUBDIR += py-cbor2
