--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -397,6 +397,8 @@ SUBDIR += sassc
 SUBDIR += scdoc
 SUBDIR += scim
 SUBDIR += scim-input-pad
+SUBDIR += scim-m17n
+SUBDIR += scim-table-imengine
 SUBDIR += scr2txt
 SUBDIR += sdocbook-xml
 SUBDIR += sgmlformat
