--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -182,6 +182,7 @@ SUBDIR += p5-Text-Soundex
 SUBDIR += p5-Text-TabularDisplay
 SUBDIR += p5-Text-Tabs+Wrap
 SUBDIR += p5-Text-Template
+SUBDIR += p5-Text-TestBase
 SUBDIR += p5-Text-WordDiff
 SUBDIR += p5-Unicode-EastAsianWidth
 SUBDIR += p5-Unicode-LineBreak
