--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -83,6 +83,8 @@ SUBDIR += notify-osd
 SUBDIR += owncloudclient
 SUBDIR += pim-data-exporter
 SUBDIR += pim-sieve-editor
+SUBDIR += plan
+SUBDIR += plasma6-xdg-desktop-portal-kde
 SUBDIR += plopfolio
 SUBDIR += preferencepanes
 SUBDIR += preferences
