dragon / kdenlive / kdemultimedia

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -10,6 +10,7 @@ SUBDIR += clutter-gst3
 SUBDIR += cmrtlib
 SUBDIR += dav1d
 SUBDIR += dirac
+SUBDIR += dragon
 SUBDIR += emby-server
 SUBDIR += emby-server46
 SUBDIR += ffmpeg
@@ -61,7 +62,9 @@ SUBDIR += gstreamer1-validate
 SUBDIR += gstreamermm
 SUBDIR += intel-media-sdk
 SUBDIR += jellyfin-media-player
+SUBDIR += kdemultimedia
 SUBDIR += kdemultimedia-ffmpegthumbs
+sUBDIR += kdenlive
 SUBDIR += kf5-kmediaplayer
 SUBDIR += l-smash
 SUBDIR += libaacs
