--- a/audio/Makefile
+++ b/audio/Makefile
@@ -4,6 +4,7 @@ SUBDIR += alsa-lib
 SUBDIR += alsa-plugins
 SUBDIR += alsa-utils
 SUBDIR += audacity
+SUBDIR += audiocd-kio
 SUBDIR += cddb-bundle
 SUBDIR += cdparanoia
 SUBDIR += chromaprint
@@ -86,6 +87,8 @@ SUBDIR += libgig
 SUBDIR += libgpod
 SUBDIR += libgme
 SUBDIR += libid3tag
+SUBDIR += libkcddb
+SUBDIR += libkcompactdisc
 SUBDIR += liblo
 SUBDIR += libmad
 SUBDIR += libmatemixer
