--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -38,6 +38,10 @@ SUBDIR += fortytwo
 SUBDIR += freeglut
 SUBDIR += freeimage
 SUBDIR += frei0r
+SUBDIR += frei0r-plugins
+SUBDIR += frei0r-plugins-cairo
+SUBDIR += frei0r-plugins-gavl
+SUBDIR += frei0r-plugins-opencv
 SUBDIR += ftgl
 SUBDIR += gd
 SUBDIR += gdal
