--- a/graphics/frei0r/Makefile
+++ b/graphics/frei0r/Makefile
@@ -1,68 +1,57 @@
-
-
 PORTNAME=	frei0r
-PORTVERSION=	1.6.1
-DISTVERSIONPREFIX=	plugins-
+DISTVERSIONPREFIX=	v
+DISTVERSION=	${FREI0R_VERSION}
+PORTREVISION?=	0
 CATEGORIES=	graphics
-MASTER_SITES?=	https://files.dyne.org/frei0r/releases/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT?=	Minimalistic plugin API for video effects
+WWW=		https://frei0r.dyne.org/
 
-.if !defined(BUILDING_FREI0R_METAPORT)
+LICENSE=	gpl2+
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-LICENSE=	gpl2
-LICENSE_FILE=	${WRKSRC}/COPYING.txt
+USES=		cmake compiler:c++11-lang pkgconfig
+USE_GITHUB=	yes
+GH_ACCOUNT=	dyne
 
-USES=	cmake pkgconfig
+.if defined(SLAVE_PORT)
+RUN_DEPENDS=	frei0r>=${FREI0R_VERSION}:graphics/frei0r
+.  if ${SLAVE_PORT:tl} == "cairo"
+USES+=		gnome
+USE_GNOME+=	cairo
 
-.if defined(BUILDING_FREI0R_OPENCV) && defined(BUILDING_FREI0R_GAVL)
-IGNORE=		cannot build OpenCV and gavl plugins simultaneously
-.endif
-
-.if defined(BUILDING_FREI0R_OPENCV) || defined(BUILDING_FREI0R_GAVL)
-EXTRA_PATCHES=	${PATCHDIR}/extra-patch-frei0r-plugins \
-		${PATCHDIR}/extra-patch-src_filter_facedetect_CMakeLists.txt
-
-USES+=	localbase
-.endif
-
-.if defined(BUILDING_FREI0R_OPENCV)
-PORTREVISION=	1
-COMMENT=	Frei0r OpenCV plugins
-PKGNAMESUFFIX=	-plugins-opencv
-LIB_DEPENDS+=	libopencv_core.so:graphics/opencv-core \
-		libopencv_video.so:graphics/opencv
-FREI0R_PLUGINS=	facebl0r facedetect
-
-CMAKE_ARGS+=	-DWITHOUT_OPENCV:BOOL=OFF \
-		-DWITHOUT_GAVL:BOOL=ON
-.elif defined(BUILDING_FREI0R_GAVL)
-PORTREVISION=	0
-COMMENT=	Frei0r gavl plugins
-PKGNAMESUFFIX=	-plugins-gavl
+CMAKE_ON=	WITHOUT_GAVL \
+		WITHOUT_OPENCV
+CMAKE_OFF=	WITHOUT_CAIRO
+.  elif ${SLAVE_PORT:tl} == "gavl"
 LIB_DEPENDS+=	libgavl.so:multimedia/gavl
-FREI0R_PLUGINS=	rgbparade scale0tilt vectorscope
 
-CMAKE_ARGS+=	-DWITHOUT_OPENCV:BOOL=ON \
-		-DWITHOUT_GAVL:BOOL=OFF
+CMAKE_ON=	WITHOUT_CAIRO \
+		WITHOUT_OPENCV
+CMAKE_OFF=	WITHOUT_GAVL
+.  elif ${SLAVE_PORT:tl} == "opencv"
+LIB_DEPENDS+=	libopencv_core.so:graphics/opencv
+
+CMAKE_ON=	WITHOUT_CAIRO \
+		WITHOUT_GAVL
+CMAKE_OFF=	WITHOUT_OPENCV
+.  endif
 .else
-EXTRA_PATCHES=	${PATCHDIR}/extra-patch-CMakeLists.txt
-
-USE_GNOME=	cairo
-
-CMAKE_ARGS+=	-DWITHOUT_OPENCV:BOOL=ON \
-		-DWITHOUT_GAVL:BOOL=ON
-
-.endif # !defined(BUILDING_FREI0R_OPENCV) && !defined(BUILDING_FREI0R_GAVL)
-
-.if defined(FREI0R_PLUGINS)
-PLIST=	${WRKSRC}/PLIST
-. for FILE in ${FREI0R_PLUGINS}
-PLIST_FILES+=	lib/frei0r-1/${FILE}.so
-. endfor
+CMAKE_ON=	WITHOUT_CAIRO \
+		WITHOUT_GAVL \
+		WITHOUT_OPENCV
+CMAKE_OFF=	BUILD_EXTRA_PLUGINS
 .endif
 
-.include <bsd.port.mk>
+.include "version.mk"
+.include <bsd.port.pre.mk>
 
-.endif # !defined(BUILDING_FREI0R_METAPORT)
+.if ${CHOSEN_COMPILER_TYPE} == gcc
+# work around regression seen in GCC 10 but not in GCC 9:
+# src/filter/elastic_scale/elastic_scale.cpp:152: error: ISO C++ forbids initialization of member 'm_transformationCalculations'
+CFLAGS+=	-Wno-error
+CXXFLAGS+=	-Wno-error
+.endif
+
+.include <bsd.port.post.mk>
