--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -113,12 +113,16 @@ SUBDIR += linux-tsmuxer
 SUBDIR += linux_dvbwrapper-kmod
 SUBDIR += makemkv
 SUBDIR += mjpegtools
+SUBDIR += mlt7
+SUBDIR += mlt7-qt
+SUBDIR += mlt7-glaxnimate
 SUBDIR += mp4v2
 SUBDIR += mpeg2codec
 SUBDIR += mplayer
 SUBDIR += mplayer-skins
 SUBDIR += mpv
 SUBDIR += openh264
+SUBDIR += opentimelineio
 SUBDIR += phonon
 SUBDIR += phonon-gstreamer
 SUBDIR += phonon-mpv
