--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1582,6 +1582,7 @@ SUBDIR += rebar
 SUBDIR += rebar3
 SUBDIR += riscv64-none-elf-gcc
 SUBDIR += rlog
+SUBDIR += rttr
 SUBDIR += ruby-gems
 SUBDIR += rubygem-ast
 SUBDIR += rubygem-builder
