textproc/py-tomlkit: upate

--- a/textproc/py-tomlkit/Makefile
+++ b/textproc/py-tomlkit/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	tomlkit
-PORTVERSION=	0.12.4
+PORTVERSION=	0.13.2
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI \
 		https://github.com/sdispater/tomlkit/releases/download/${PORTVERSION}/
@@ -8,19 +8,20 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Style-preserving TOML library
 WWW=		https://tomlkit.readthedocs.io/en/latest/ \
-		https://github.com/sdispater/tomlkit
+		https://github.com/python-poetry/tomlkit
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}yaml>=0:devel/py-yaml@${PY_FLAVOR}
+TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyyaml>=0:devel/py-pyyaml@${PY_FLAVOR}
 
-USES=		python
-USE_PYTHON=	autoplist concurrent pep517
+USES=		python shebangfix
+USE_PYTHON=	autoplist concurrent pep517 pytest
 
 NO_ARCH=	yes
-NO_TEST=	yes
+
+SHEBANG_FILES=	tests/toml-test/gen-multi.py
 
 post-patch:
 	@${MV} ${WRKSRC}/tests ${WRKSRC}/tomlkit
