--- a/lang/Makefile
+++ b/lang/Makefile
@@ -32,6 +32,7 @@ SUBDIR += gcc11
 SUBDIR += gcc12
 SUBDIR += gcc13
 SUBDIR += gcc14
+SUBDIR += gcc15
 SUBDIR += gcc-ecj45
 SUBDIR += ghc
 SUBDIR += gjs
