textproc/rarian: update to 0.8.5

--- a/textproc/rarian/Makefile
+++ b/textproc/rarian/Makefile
@@ -1,35 +1,43 @@
 PORTNAME=	rarian
-PORTVERSION=	0.8.1
-PORTREVISION=	6
+DISTVERSION=	0.8.5
+PORTREVISION=	0
 CATEGORIES=	textproc gnome
-MASTER_SITES=	GNOME
+MASTER_SITES=	https://gitlab.freedesktop.org/${PORTNAME}/${PORTNAME}/-/releases/${DISTVERSION}/downloads/assets/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	OMF help system based on the Freedesktop specification
+WWW=		https://rarian.freedesktop.org/
 
-LICENSE=        gpl2
+LICENSE=	gpl2+ lgpl2.1+ zlib
+LICENSE_COMB=	multi
+LICENSE_FILE_gpl2+ =	${WRKSRC}/COPYING.UTILS
+LICENSE_FILE_lgpl2.1+ =	${WRKSRC}/COPYING.LIB
+LICENSE_FILE_zlib=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	${LOCALBASE}/share/xsl/docbook/xhtml/chunk.xsl:textproc/docbook-xsl \
-    		docbook-xml>0:textproc/docbook-xml \
-		bash:shells/bash
-RUN_DEPENDS=	bash:shells/bash \
-    		${LOCALBASE}/bin/getopt:misc/getopt \
-		${LOCALBASE}/share/xsl/docbook/xhtml/chunk.xsl:textproc/docbook-xsl \
-		docbook-xml>0:textproc/docbook-xml
+BUILD_DEPENDS=	getopt>=0:misc/getopt \
+		bash:shells/bash \
+		xsltproc:textproc/libxslt \
+		docbook-xml>0:textproc/docbook-xml \
+		${LOCALBASE}/share/xsl/docbook/xhtml/chunk.xsl:textproc/docbook-xsl
+LIB_DEPENDS=	libtinyxml.so:textproc/tinyxml
+RUN_DEPENDS=	getopt>=0:misc/getopt \
+		bash:shells/bash \
+		xsltproc:textproc/libxslt \
+		docbook-xml>0:textproc/docbook-xml \
+		${LOCALBASE}/share/xsl/docbook/xhtml/chunk.xsl:textproc/docbook-xsl
 
-DOCBOOK_VERSION=4.2
-
-CONFLICTS=	scrollkeeper-[0-9]*
-
-USES=		gmake gnome libtool pathfix python tar:bzip2
-USE_GNOME=	libxslt
+USES=		gmake libtool localbase pathfix pkgconfig tar:bzip2
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-convert-dir=${LOCALBASE}/share/omf \
-		--datadir=${PREFIX}/share \
-		--localstatedir=/var
-CPPFLAGS+=	-I${LOCALBASE}/include
-LIBS+=		-L${LOCALBASE}/lib
+CONFIGURE_ARGS=	--localstatedir=/var \
+		--with-convert-dir=${LOCALBASE}/share/omf \
+		--with-default-data-dirs="${LOCALBASE}/share:/usr/share" \
+		--with-default-infopath="${LOCALBASE}/info:${LOCALBASE}/share/info" \
+		--with-default-manpath="/usr/share/man:${LOCALBASE}/share/man:${LOCALBASE}/man" \
+		--with-gnu-getopt=${LOCALBASE}/bin/getopt \
+		--with-localstate-subdir=db/rarian \
+		--with-metadata-dir=${DOCSDIR}
+
 INSTALL_TARGET=	install-strip
 
 post-patch:
