--- a/textproc/rarian/files/patch-util_Makefile.in
+++ b/textproc/rarian/files/patch-util_Makefile.in
@@ -1,15 +1,11 @@
---- util/Makefile.in.orig	2010-10-03 11:23:55.000000000 +0200
-+++ util/Makefile.in	2010-10-03 11:24:58.000000000 +0200
-@@ -401,10 +401,10 @@
- 	done
- rarian-example$(EXEEXT): $(rarian_example_OBJECTS) $(rarian_example_DEPENDENCIES) 
- 	@rm -f rarian-example$(EXEEXT)
--	$(LINK) $(rarian_example_OBJECTS) $(rarian_example_LDADD) $(LIBS)
-+	$(CXXLINK) $(rarian_example_OBJECTS) $(rarian_example_LDADD) $(LIBS)
- rarian-sk-gen-uuid$(EXEEXT): $(rarian_sk_gen_uuid_OBJECTS) $(rarian_sk_gen_uuid_DEPENDENCIES) 
- 	@rm -f rarian-sk-gen-uuid$(EXEEXT)
--	$(LINK) $(rarian_sk_gen_uuid_OBJECTS) $(rarian_sk_gen_uuid_LDADD) $(LIBS)
-+	$(CXXLINK) $(rarian_sk_gen_uuid_OBJECTS) $(rarian_sk_gen_uuid_LDADD) $(LIBS)
- rarian-sk-get-cl$(EXEEXT): $(rarian_sk_get_cl_OBJECTS) $(rarian_sk_get_cl_DEPENDENCIES) 
- 	@rm -f rarian-sk-get-cl$(EXEEXT)
- 	$(rarian_sk_get_cl_LINK) $(rarian_sk_get_cl_OBJECTS) $(rarian_sk_get_cl_LDADD) $(LIBS) 
+--- util/Makefile.in.orig	2023-12-09 03:21:05 UTC
++++ util/Makefile.in
+@@ -987,7 +987,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIP
+ @ENABLE_INSTALL_TRUE@@ENABLE_SK_COMPAT_TRUE@	@cd $(DESTDIR)$(bindir); ln -s rarian-sk-rebuild scrollkeeper-rebuilddb
+ @ENABLE_INSTALL_TRUE@@ENABLE_SK_COMPAT_TRUE@	@cd $(DESTDIR)$(bindir); ln -s rarian-sk-install scrollkeeper-uninstall
+ @ENABLE_INSTALL_TRUE@@ENABLE_SK_COMPAT_TRUE@	@cd $(DESTDIR)$(bindir); ln -s rarian-sk-update scrollkeeper-update
+-@ENABLE_INSTALL_TRUE@@ENABLE_SK_COMPAT_TRUE@	@mkdir -p $(DESTDIR)/$(localstatedir)/lib/rarian
++@ENABLE_INSTALL_TRUE@@ENABLE_SK_COMPAT_TRUE@	@mkdir -p $(DESTDIR)/$(localstatedir)/db/rarian
+ @ENABLE_INSTALL_TRUE@@ENABLE_SKDB_UPDATE_TRUE@@ENABLE_SK_COMPAT_TRUE@	@echo "Translating current database"
+ @ENABLE_INSTALL_TRUE@@ENABLE_SKDB_UPDATE_TRUE@@ENABLE_SK_COMPAT_TRUE@	@$(DESTDIR)$(bindir)/rarian-sk-update
+ 
