--- a/textproc/py-sphinxcontrib-applehelp/Makefile
+++ b/textproc/py-sphinxcontrib-applehelp/Makefile
@@ -15,8 +15,9 @@ LICENSE_FILE=	${WRKSRC}/LICENCE.rst
 USES=		python
 USE_GITHUB=	yes
 GH_TUPLE=	sphinx-doc:sphinxcontrib-applehelp:${PORTVERSION}
-USE_PYTHON=	autoplist concurrent pep517 pytest
+USE_PYTHON=	autoplist concurrent pep517
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>0:devel/py-flit-core@${PY_FLAVOR}
 NO_ARCH=	yes
+NO_TEST=	yes
 
 .include <bsd.port.mk>
