deskutils/xdg-terminal-exec: prefix

--- a/deskutils/xdg-terminal-exec/Makefile
+++ b/deskutils/xdg-terminal-exec/Makefile
@@ -17,7 +17,7 @@ USES=		gmake
 USE_GITHUB=	yes
 GH_ACCOUNT=	Vladimir-csp
 
-MAKE_ARGS=	prefix=${STAGEDIR}${PREFIX}
+MAKE_ARGS=	prefix=${FAKE_DESTDIR}${TRUE_PREFIX}
 
 BINARY_ALIAS=	install=ginstall
 OPTIONS_SUB=	yes
